--- a/style2.css
+++ b/style2.css
@@ -11,7 +11,7 @@ body
     background-size: cover;
     background-repeat: no-repeat;
     backface-visibility: hidden;
-
+        height: 100%;
 }
 #login-box
 {
