--- a/style2.css
+++ b/style2.css
@@ -2,16 +2,15 @@ body
 {
     margin: 0;
     padding: 0;
-    background: #efefef;
     font-size: 16px;
     color: #777;
     font-family: sans-serif;
     font-weight: 300;
-    background-image: url("bgpic.jpg");
+    background: url("bgpic.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     backface-visibility: hidden;
-        height: 100%;
+    height: 100%;
 }
 #login-box
 {
