--- a/style2.css
+++ b/style2.css
@@ -6,12 +6,8 @@ body
     color: #777;
     font-family: sans-serif;
     font-weight: 300;
-    background-image: url("bgpic.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    backface-visibility: hidden;
-    background-position: bottom;
-    height: 100%;
+    background-color: black;
+
 
 }
 #login-box
